# lumos

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.test.yml  lumos.config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/api/: agents.js  audit.js  client.js  policy.js  stats.js
dashboard/src/components/: Badge.jsx  Layout.jsx  StatCard.jsx  Toast.jsx
dashboard/src/pages/: Agents.jsx  AuditLog.jsx  Costs.jsx  Overview.jsx  PolicyEditor.jsx
docker/: .dockerignore  Dockerfile.api  Dockerfile.proxy  docker-compose.yml
lumos/: config.py
lumos/api/: main.py  schemas.py  security.py
lumos/auth/: __init__.py  crypto.py  issuer.py  tokens.py
lumos/db/: __init__.py  connection.py  models.py  repositories.py  schema.sql  sweeper.py
lumos/policy/: budget.py  engine.py  loader.py  matchers.py  pii.py  rate_limiter.py
lumos/proxy/: audit.py  identity.py  main.py  proxy.py  router.py
lumos/proxy/transport/: __init__.py  http_sse.py
policies/: default.yaml
tests/: conftest.py  test_api_surface.py  test_phase2_auth.py  test_policy_engine.py  test_proxy_adversarial.py  test_proxy_integration.py  test_security_fixes.py
